[metadata]
name = langscikw
version = 0.0.1
author = Noel Simmel
author_email = noelsimmel@protonmail.com
description = Keyword extraction from linguistic publications
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/langsci/langscikw
project_urls =
    Bug Tracker = https://github.com/langsci/langscikw/issues
    Language Science Press = https://langsci-press.org/
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: OS Independent